test/fixtures/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow udp 53317 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 53317 -j ACCEPT

### tuple ### allow tcp 53317 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 53317 -j ACCEPT

### tuple ### limit tcp 22 ::/0 any ::/0 in comment=6f6d61726368792d73736864
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 22 -j ufw6-user-limit-accept

### tuple ### allow udp 60000:61000 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 60000:61000 -j ACCEPT

### tuple ### allow tcp 8081 ::/0 any ::/0 in comment=6578706f206d6574726f
-A ufw6-user-input -p tcp --dport 8081 -j ACCEPT

### tuple ### allow tcp 8001 ::/0 any ::/0 in comment=6c61726176656c206172746973616e
-A ufw6-user-input -p tcp --dport 8001 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
